apps/oxlint/src/snapshots/fixtures__cli__ignore_patterns_symlink_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_patterns_symlink
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_patterns_symlink
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
