apps/oxlint/src/snapshots/fixtures__cli__invalid_config_complex_enum_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_complex_enum
----------
Failed to parse oxlint configuration file.

  x Invalid configuration for rule `react/jsx-fragments`:
  |   data did not match any variant of untagged enum JsxFragments
  |   received config: `"somethingelse"`

----------
CLI result: InvalidOptionConfig
----------
