apps/oxlint/src/snapshots/fixtures__cli__invalid_config_missing_builtin_rule_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_missing_builtin_rule
----------
Failed to parse oxlint configuration file.

  x Rule 'no-console-typo' not found in plugin 'eslint'
  | 
  | Rule 'yikes' not found in plugin 'eslint'

----------
CLI result: InvalidOptionConfig
----------
