apps/oxlint/src/snapshots/fixtures__cli__invalid_config_missing_rule_in_override_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_missing_rule_in_override
----------
Failed to build configuration.

  x Rule 'fake-rule-one' not found in plugin 'unicorn'

  x Rule 'fake-rule-two' not found in plugin 'unicorn'

----------
CLI result: InvalidOptionConfig
----------
