apps/oxlint/src/snapshots/fixtures__cli__invalid_config_rules_without_config_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_rules_without_config
----------
Failed to parse oxlint configuration file.

  x Invalid configuration for rule `no-debugger`:
  |   This rule does not accept configuration options.

----------
CLI result: InvalidOptionConfig
----------
